--- a/src/components/widgets/Announcement.astro
+++ b/src/components/widgets/Announcement.astro
@@ -9,10 +9,10 @@ const { content = ANNOUNCEMENT_CONTENT } = Astro.props;
 >
   <span
     class="dark:bg-slate-700 bg-white/40 dark:text-slate-300 font-semibold px-1 py-0.5 text-xs mr-0.5 rtl:mr-0 rtl:ml-0.5 inline-block"
-    >NEW</span
+    >⚠️</span
   >
-  <a href="https://astro.build/blog/astro-570/" class="text-muted hover:underline dark:text-slate-400 font-medium"
-    >Astro v5.7 is now available! »</a
+  <a href="https://it-technicians.com/contact/" class="text-muted hover:underline dark:text-slate-400 font-medium"
+    >We're at Full Capacity! »</a
   >
   <div class="text-sm text-gray-700 dark:text-gray-200 md:text-center">
     {/* <Fragment set:html={content} /> */}
@@ -22,7 +22,7 @@ const { content = ANNOUNCEMENT_CONTENT } = Astro.props;
       class="ml-1 rtl:ml-0 rtl:mr-1 hover:underline"
       target="_blank"
       rel="noopener"
-      href="https://github.com/sponsors/onwidget"
+      href="https://it-technicians.com/contact/"
       >Support us
     </a>
     ·
